fixing spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,26 +11,22 @@ body {
     color: rgb(0, 122, 255);
 }
 
-.container {
-    margin-top: 80px;
-    margin-bottom: 100px;
-    width: 85%;
-}
+
 
 .main {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 25px;
     padding: 20px;
-    margin-top: 150px;
+    margin-top: 80px;
 }
 
-.about-me-html .main {
+/* .about-me-html .main {
     margin-top: 100px;
 }
 
 .contact-html .main {
     margin-top: 80px;
-}
+} */
 
 nav .container {
     margin: 0;
@@ -79,7 +75,7 @@ p {
 }
 
 .about-me-html img {
-    /* padding: 0 2% 4% 0; */
+    padding: 0 2% 4% 0;
 
 
 }
